{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "76724951-950d-4331-8b04-84996c584292",
            "actions": [
                {
                    "name": "OnMove",
                    "type": "Value",
                    "id": "9ba79e08-ade5-40f6-9312-02c924809aa4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnRotate",
                    "type": "Value",
                    "id": "c8b27ccc-3252-4d15-b0eb-d24a73f067d4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnJump",
                    "type": "Button",
                    "id": "43bd47d7-b8cd-4d7b-b90e-13298cf006c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnThrow",
                    "type": "Button",
                    "id": "536aad90-34f0-499c-8162-b9fa5c112f52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c52647dd-0f13-4f1e-be70-9b614e049295",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bb89d22f-3eef-491d-b15d-e1a2b2c0f486",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0527cbe8-1b65-4ad2-bfe2-0402758ca7c8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c38a9347-4609-4520-a985-02c061f31be3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "88fd5bb1-3311-463d-b045-9a00238fd27a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f4d2f0d3-60a3-4b82-976f-d240574acf7c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d9a7b54-71a3-42f9-b4fa-2e8b95167b0d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7502b93-b0f5-47db-9ce0-a9cbb6a4c160",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnThrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Toggler",
            "id": "5b9feb7b-7b49-4fc8-961d-6ef961867d40",
            "actions": [
                {
                    "name": "OnToggleControls",
                    "type": "Button",
                    "id": "6b0e312a-1ab0-43c4-ab9c-afc2b7f81cfb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnLockCursor",
                    "type": "Button",
                    "id": "02aa67a2-09a8-401d-8dc1-3a34c15c958e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3402a688-09fa-4102-827e-44f5c780e57e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnToggleControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb1bd71b-af7e-46fa-b7a6-372b8b90adf2",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnLockCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}